# structurefactor

./: .gitignore  app.py  basis_test.json  crystal_new_test.json  crystal_test.json  lib.py  make.bat  pyproject.toml
docs/: .buildinfo  genindex.html  objects.inv  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/lib/: docs.html
docsrc/: conf.py
docsrc/lib/: docs.rst
frontend/: index.html
tests/: test_structurfactor.py
