[tool.poetry]
name = "structurfactor"
version = "0.1.0"
description = ""
authors = ["Frederic Timmer <ftimmer@uos.de>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.2"
flask-restx = "^0.2.0"
pickleDB = "^0.9.2"
flask-cors = "^3.0.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
